[project]
name = "wdm"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy==1.26.4",
    "torch==2.2.0",
    "pywavelets==1.4.1",
    "scipy==1.12.0",
    "torchvision==0.17.0",
    "nibabel==5.2.0",
    "blobfile==2.1.1",
    "tensorboard==2.16.2",
    "matplotlib==3.8.3",
    "tqdm==4.66.2",
    "dicom2nifti==2.4.10",
]

[dependency-groups]
dev = [
    "huggingface-hub[cli]",
    "ipykernel",
    "ipywidgets",
    "torchio[plot]",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
